--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:32:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:33:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,10 +182,10 @@ Missed Cut</td>
 E thru 12</td>
       <td>Will Zalatoris -1
 E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
-      <td class="greyout">Tony Finau +4
+      <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -214,8 +214,8 @@ Missed Cut</td>
 -2 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -294,8 +294,8 @@ Missed Cut</td>
 -2 thru 10</td>
       <td>Dustin Johnson(W) E
 +2 thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -10
 -2 thru 7</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout leftborder">Robert MacIntyre +6
 +4 thru 15</td>
       <td class="greyout">Jon Rahm +8
@@ -390,25 +390,9 @@ Missed Cut</td>
 E thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Cameron Smith(W) -5
--3 thru 10</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 13</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -422,8 +406,24 @@ E thru 12</td>
 -1 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -10
+-2 thru 7</td>
+      <td>Cameron Smith(W) -5
+-3 thru 10</td>
+      <td>Matthew Fitzpatrick +3
 +3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -438,26 +438,10 @@ Missed Cut</td>
 E thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout">Jon Rahm(W) +8
 +6 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay(W) +4
-+3 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -473,6 +457,22 @@ E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -10
+-2 thru 7</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +5
++4 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -524,38 +524,6 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -5
--3 thru 10</td>
-      <td>Justin Thomas(W) -1
-E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
-      <td>Cameron Smith -5
--3 thru 10</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
-      <td>Billy Horschel +10
-+7 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry(W) -5
@@ -588,6 +556,22 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -5
+-3 thru 10</td>
+      <td>Justin Thomas(W) -1
+E thru 12</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
       <td>Collin Morikawa -1
@@ -602,6 +586,22 @@ E thru 10</td>
 +2 thru 14</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 7</td>
+      <td>Cameron Smith -5
+-3 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td>Billy Horschel +10
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -684,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa -1
-E thru 10</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -3
@@ -713,6 +697,22 @@ E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -733,15 +733,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
       <td>Rory McIlroy(W) +1
 -1 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout">Jordan Spieth
@@ -749,13 +749,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Scottie Scheffler -10
 -2 thru 7</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Adam Scott +12
 +8 (F)</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -813,13 +813,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Collin Morikawa(W) -1
 E thru 10</td>
       <td>Hideki Matsuyama +1
 +4 thru 8</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout leftborder">Paul Casey
@@ -829,13 +829,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Hideki Matsuyama +1
 +4 thru 8</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Jon Rahm(W) +8
 +6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -845,13 +845,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
-      <td>Patrick Cantlay(W) +4
-+3 thru 13</td>
+      <td>Patrick Cantlay(W) +5
++4 thru 14</td>
       <td>Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -861,13 +861,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Daniel Berger +7
 +5 (F)</td>
       <td class="greyout leftborder">Jon Rahm +8
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa -1
 E thru 10</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Jon Rahm(W) +8
 +6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth(W)
