--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:32:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:33:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ body {
 E thru 12</td>
       <td>Will Zalatoris -1
 E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
-      <td class="greyout">Tony Finau +4
+      <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Shane Lowry -5
 -2 thru 7</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout">Tyrrell Hatton +9
@@ -237,15 +237,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith(W) -5
 -3 thru 10</td>
       <td>Collin Morikawa -1
 E thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -278,8 +278,8 @@ E thru 10</td>
 +4 thru 7</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa -1
 E thru 10</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Jon Rahm(W) +8
 +6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
       <td>Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth(W)
