--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:34:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:35:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,6 +252,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas -1
+E thru 12</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
+      <td>Sungjae Im E
++3 thru 8</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
@@ -264,22 +280,6 @@ E thru 10</td>
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +7
 +5 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas -1
-E thru 12</td>
-      <td>Collin Morikawa -1
-E thru 10</td>
-      <td>Sungjae Im +1
-+4 thru 7</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
