--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:37:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:38:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 7</td>
+      <td>Cameron Smith -5
+-3 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -10
@@ -186,22 +202,6 @@ E thru 10</td>
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +5
 +4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
-      <td>Cameron Smith -5
--3 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -284,6 +284,22 @@ E thru 14</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-13</td>
+      <td>Cameron Smith(W) -5
+-3 thru 10</td>
+      <td>Shane Lowry -5
+-2 thru 8</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Jon Rahm +8
++6 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-13</td>
       <td>Shane Lowry -5
@@ -316,22 +332,6 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith(W) -5
--3 thru 10</td>
-      <td>Shane Lowry -5
--2 thru 8</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Jon Rahm +8
-+6 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -10
@@ -339,13 +339,29 @@ Missed Cut</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
       <td class="greyout leftborder">Robert MacIntyre +6
 +4 thru 15</td>
       <td class="greyout">Jon Rahm +8
 +6 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -5
+-3 thru 10</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Justin Thomas -1
+E thru 12</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
+      <td class="greyout leftborder">Marc Leishman +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -361,22 +377,6 @@ E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -5
--3 thru 10</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Justin Thomas -1
-E thru 12</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
-      <td class="greyout leftborder">Marc Leishman +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -403,7 +403,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
@@ -476,30 +476,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Justin Thomas(W) -1
-E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Corey Conners -3
 -2 thru 10</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
       <td>Talor Gooch +3
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +8
@@ -509,18 +493,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Justin Thomas -1
 E thru 12</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
       <td>Rory McIlroy(W) +1
--1 thru 17</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
+-1 (F)</td>
       <td class="greyout leftborder">Tiger Woods +3
-+2 thru 14</td>
++2 thru 15</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Justin Thomas(W) -1
+E thru 12</td>
+      <td>Will Zalatoris -1
+E thru 10</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -549,7 +549,7 @@ E thru 10</td>
       <td>Will Zalatoris -1
 E thru 10</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
@@ -581,9 +581,9 @@ E thru 12</td>
       <td>Will Zalatoris -1
 E thru 10</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td class="greyout leftborder">Tiger Woods(W) +3
-+2 thru 14</td>
++2 thru 15</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
     </tr>
@@ -627,11 +627,11 @@ E thru 10</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Tiger Woods +3
-+2 thru 14</td>
++2 thru 15</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -657,7 +657,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -10
 -2 thru 7</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm(W) +8
@@ -675,7 +675,7 @@ Missed Cut</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Tiger Woods +3
-+2 thru 14</td>
++2 thru 15</td>
       <td>Jon Rahm(W) +8
 +6 thru 17</td>
       <td class="greyout leftborder">Sam Burns
@@ -691,7 +691,7 @@ Missed Cut</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Jon Rahm(W) +8
 +6 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -721,7 +721,7 @@ Missed Cut</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Bubba Watson +7
@@ -737,7 +737,7 @@ Missed Cut</td>
       <td>Dustin Johnson E
 +2 thru 9</td>
       <td>Rory McIlroy(W) +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
@@ -813,11 +813,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa(W) -1
 E thru 10</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
       <td>Jon Rahm +8
@@ -829,11 +829,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 E thru 12</td>
-      <td>Hideki Matsuyama +1
-+4 thru 8</td>
+      <td>Hideki Matsuyama E
++3 thru 9</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
       <td>Jon Rahm(W) +8
@@ -849,7 +849,7 @@ Missed Cut</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Rory McIlroy +1
--1 thru 17</td>
+-1 (F)</td>
       <td>Patrick Cantlay(W) +5
 +4 thru 14</td>
       <td>Jon Rahm +8
