--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:38:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:38:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -230,10 +230,10 @@ E thru 12</td>
 -2 (F)</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td class="greyout leftborder">Joaquin Niemann +2
-+3 thru 11</td>
-      <td class="greyout">Viktor Hovland +3
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout">Joaquin Niemann +3
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
