--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:39:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:40:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -10
 -2 thru 7</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
+      <td>Will Zalatoris -2
+-1 thru 11</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +5
@@ -157,15 +157,15 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
+      <td>Will Zalatoris -2
+-1 thru 11</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 +3 thru 13</td>
       <td class="greyout">Brooks Koepka
@@ -173,13 +173,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -10
 -2 thru 7</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
+      <td>Will Zalatoris -2
+-1 thru 11</td>
       <td>Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -236,12 +236,28 @@ E thru 12</td>
 +4 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Will Zalatoris -2
+-1 thru 11</td>
+      <td>Justin Thomas(W) -1
+E thru 12</td>
+      <td>Collin Morikawa -1
+E thru 11</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) -5
 -3 thru 10</td>
       <td>Collin Morikawa -1
-E thru 10</td>
+E thru 11</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Patrick Cantlay +5
@@ -257,29 +273,13 @@ Missed Cut</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Collin Morikawa -1
-E thru 10</td>
+E thru 11</td>
       <td>Sungjae Im E
 +3 thru 8</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 14</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas(W) -1
-E thru 12</td>
-      <td>Collin Morikawa -1
-E thru 10</td>
-      <td>Will Zalatoris -1
-E thru 10</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +7
-+5 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -305,9 +305,9 @@ Missed Cut</td>
       <td>Corey Conners(W) -3
 -2 thru 10</td>
       <td>Collin Morikawa -1
-E thru 10</td>
+E thru 11</td>
       <td>Robert MacIntyre +6
-+4 thru 15</td>
++4 thru 16</td>
       <td>Daniel Berger +7
 +5 (F)</td>
       <td class="greyout leftborder">Jon Rahm +8
@@ -319,7 +319,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa -1
-E thru 10</td>
+E thru 11</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -335,7 +335,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">16</td>
       <td>Collin Morikawa -1
-E thru 10</td>
+E thru 11</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Patrick Cantlay +5
