--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:41:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:42:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-12</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Corey Conners -3
 -2 thru 10</td>
-      <td>Dustin Johnson(W) E
-+2 thru 9</td>
+      <td>Dustin Johnson(W) +1
++3 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 14</td>
       <td class="greyout">Louis Oosthuizen
@@ -636,22 +636,6 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">2</td>
-      <td>Shane Lowry -5
--2 thru 8</td>
-      <td>Dustin Johnson(W) E
-+2 thru 9</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 13</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -10
@@ -681,6 +665,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">3</td>
+      <td>Shane Lowry -5
+-2 thru 8</td>
+      <td>Dustin Johnson(W) +1
++3 thru 10</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 13</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -764,38 +764,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">9</td>
-      <td>Dustin Johnson E
-+2 thru 9</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">9</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Dustin Johnson E
-+2 thru 9</td>
-      <td>Patrick Cantlay +5
-+4 thru 14</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">9</td>
       <td>Corey Conners(W) -3
@@ -809,6 +777,38 @@ E thru 11</td>
       <td class="greyout leftborder">Jon Rahm +8
 +6 thru 17</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">10</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Dustin Johnson +1
++3 thru 10</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +8
++6 thru 17</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">10</td>
+      <td>Scottie Scheffler -10
+-2 thru 7</td>
+      <td>Dustin Johnson +1
++3 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
-      <td>Dustin Johnson E
-+2 thru 9</td>
+      <td class="bigbold">19</td>
+      <td>Dustin Johnson +1
++3 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
