--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:41:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:42:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Justin Thomas -1
 E thru 12</td>
-      <td>Dustin Johnson E
-+2 thru 9</td>
+      <td>Dustin Johnson +1
++3 thru 10</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
-      <td>Dustin Johnson E
-+2 thru 9</td>
+      <td class="bigbold">19</td>
+      <td>Dustin Johnson +1
++3 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
