--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:50:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:51:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -502,8 +502,8 @@ E thru 13</td>
 +3 thru 9</td>
       <td>Rory McIlroy(W) +1
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 15</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 16</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -598,10 +598,10 @@ E thru 13</td>
 E thru 12</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods(W) +3
-+2 thru 15</td>
-      <td class="greyout">Viktor Hovland +3
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout">Tiger Woods(W) +4
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -636,22 +636,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Tiger Woods +3
-+2 thru 15</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Collin Morikawa(W) -1
@@ -662,9 +646,25 @@ E thru 13</td>
 -1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 15</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 16</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith -5
+-3 thru 11</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Tiger Woods +4
++3 thru 16</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
