--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:51:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:51:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,22 +156,6 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-19</td>
-      <td>Scottie Scheffler(W) -11
--3 thru 8</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-19</td>
       <td>Scottie Scheffler -11
@@ -183,6 +167,22 @@ Missed Cut</td>
       <td>Justin Thomas(W) -1
 E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 8</td>
+      <td>Cameron Smith -5
+-3 thru 11</td>
+      <td>Will Zalatoris -1
+E thru 12</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -284,22 +284,6 @@ E thru 15</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith(W) -5
--3 thru 11</td>
-      <td>Shane Lowry -4
--1 thru 9</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Jon Rahm +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-11</td>
       <td>Cameron Smith -5
@@ -314,6 +298,22 @@ E thru 12</td>
 +3 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith(W) -5
+-3 thru 11</td>
+      <td>Shane Lowry -4
+-1 thru 9</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Jon Rahm +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -364,22 +364,6 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -5
--3 thru 11</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
-      <td class="greyout leftborder">Marc Leishman +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler -11
@@ -392,6 +376,22 @@ E thru 13</td>
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 15</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -5
+-3 thru 11</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Justin Thomas -1
+E thru 13</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td class="greyout leftborder">Marc Leishman +3
+-1 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -476,38 +476,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
-      <td>Talor Gooch +3
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 16</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
@@ -521,6 +489,38 @@ E thru 12</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -5
+-3 thru 11</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td>Talor Gooch +3
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -5
+-3 thru 11</td>
+      <td>Justin Thomas -1
+E thru 13</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 16</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -813,11 +813,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa(W) -1
 E thru 12</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
       <td>Patrick Cantlay +5
 +4 thru 15</td>
       <td>Jon Rahm +7
@@ -829,11 +829,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 E thru 13</td>
-      <td>Hideki Matsuyama E
-+3 thru 9</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
       <td>Patrick Cantlay +5
 +4 thru 15</td>
       <td>Jon Rahm(W) +7
