--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:04:39 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:05:22 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -236,6 +236,22 @@ Missed Cut</td>
 +7 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa -1
+E thru 12</td>
+      <td>Sungjae Im -1
++2 thru 10</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +6
++5 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">1</td>
       <td>Cameron Smith(W) -5
@@ -249,22 +265,6 @@ E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Sungjae Im E
-+3 thru 9</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
