--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:08:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:08:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,10 +214,10 @@ Missed Cut</td>
 -2 (F)</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td class="greyout leftborder">Joaquin Niemann +2
++3 thru 14</td>
+      <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Joaquin Niemann +3
-+4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -2
 -1 thru 12</td>
+      <td>Dustin Johnson E
++2 thru 12</td>
       <td>Justin Thomas E
 +1 thru 14</td>
-      <td>Dustin Johnson +1
-+3 thru 11</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -307,7 +307,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Robert MacIntyre +6
-+4 thru 17</td>
++4 (F)</td>
       <td>Jon Rahm +7
 +5 (F)</td>
       <td class="greyout leftborder">Daniel Berger +7
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Dustin Johnson +1
-+3 thru 11</td>
+      <td class="bigbold">18</td>
+      <td>Dustin Johnson E
++2 thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +6
