--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:08:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:08:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,6 +284,22 @@ E thru 16</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Shane Lowry -4
+-1 thru 10</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Dustin Johnson(W) E
++2 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +6
++5 thru 16</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith -5
@@ -316,22 +332,6 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Shane Lowry -4
--1 thru 10</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Dustin Johnson(W) +1
-+3 thru 11</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -11
@@ -359,7 +359,7 @@ Missed Cut</td>
       <td>Patrick Cantlay +6
 +5 thru 16</td>
       <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Jon Rahm +7
 +5 (F)</td>
     </tr>
@@ -588,6 +588,22 @@ E thru 12</td>
 +4 thru 17</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry(W) -4
+-1 thru 10</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Joaquin Niemann +2
++3 thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -5
@@ -620,22 +636,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">0</td>
-      <td>Shane Lowry(W) -4
--1 thru 10</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Joaquin Niemann +3
-+4 thru 13</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">3</td>
       <td>Collin Morikawa(W) -1
@@ -653,11 +653,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Shane Lowry -4
 -1 thru 10</td>
-      <td>Dustin Johnson(W) +1
-+3 thru 11</td>
+      <td>Dustin Johnson(W) E
++2 thru 12</td>
       <td>Matthew Fitzpatrick +3
 +3 thru 15</td>
       <td>Tony Finau +4
@@ -732,6 +732,22 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">9</td>
+      <td>Scottie Scheffler -11
+-3 thru 9</td>
+      <td>Dustin Johnson E
++2 thru 12</td>
+      <td>Patrick Cantlay +6
++5 thru 16</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">9</td>
       <td>Will Zalatoris -1
@@ -764,19 +780,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
+      <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">10</td>
-      <td>Scottie Scheffler -11
--3 thru 9</td>
-      <td>Dustin Johnson +1
-+3 thru 11</td>
+      <td>Dustin Johnson E
++2 thru 12</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
       <td>Patrick Cantlay +6
 +5 thru 16</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -787,25 +803,9 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Robert MacIntyre +6
-+4 thru 17</td>
++4 (F)</td>
       <td>Daniel Berger +7
 +5 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">11</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td>Dustin Johnson +1
-+3 thru 11</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
       <td class="greyout">Jordan Spieth
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Dustin Johnson +1
-+3 thru 11</td>
+      <td class="bigbold">18</td>
+      <td>Dustin Johnson E
++2 thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +6
