--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:13:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:14:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ body {
 +2 thru 13</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
-      <td class="greyout">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout">Patrick Cantlay +7
++6 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -221,17 +221,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Shane Lowry -4
 -1 thru 10</td>
       <td>Corey Conners -2
 -1 thru 12</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td>Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Tyrrell Hatton +9
 +7 (F)</td>
     </tr>
@@ -246,22 +246,22 @@ E thru 12</td>
 +1 thru 14</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith(W) -5
 -3 thru 12</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Dustin Johnson E
 +2 thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td>Jon Rahm +7
 +5 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
