--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:13:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:14:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ body {
 -1 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -264,8 +264,8 @@ Missed Cut</td>
 +2 thru 13</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
-      <td class="greyout">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout">Patrick Cantlay +7
++6 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -294,8 +294,8 @@ Missed Cut</td>
 -1 thru 12</td>
       <td>Dustin Johnson(W) E
 +2 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -324,10 +324,10 @@ Missed Cut</td>
 -1 thru 12</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Robert MacIntyre +6
+      <td>Robert MacIntyre +6
 +4 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Jon Rahm +7
 +5 (F)</td>
     </tr>
@@ -358,8 +358,8 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -377,22 +377,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -11
--3 thru 9</td>
-      <td>Cameron Smith(W) -5
--3 thru 12</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 16</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -422,25 +406,25 @@ Missed Cut</td>
 +1 thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -11
 -3 thru 9</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay(W) +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Sam Burns
+      <td>Cameron Smith(W) -5
+-3 thru 12</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -470,10 +454,26 @@ Missed Cut</td>
 +2 thru 13</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout">Jon Rahm(W) +7
+      <td class="greyout leftborder">Jon Rahm(W) +7
 +5 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
++6 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -11
+-3 thru 9</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +7
++6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -509,13 +509,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -11
 -3 thru 9</td>
       <td>Cameron Smith -5
 -3 thru 12</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td>Billy Horschel +10
 +7 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -620,22 +620,6 @@ E thru 12</td>
 +4 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td>Will Zalatoris +1
-+2 thru 13</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">3</td>
       <td>Collin Morikawa(W) -1
@@ -649,6 +633,22 @@ E thru 12</td>
       <td class="greyout leftborder">Tiger Woods +5
 +4 thru 17</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -717,15 +717,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Will Zalatoris +1
 +2 thru 13</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
       <td class="greyout">Xander Schauffele
@@ -733,34 +733,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Scottie Scheffler -11
 -3 thru 9</td>
       <td>Dustin Johnson E
 +2 thru 12</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td>Adam Scott +12
 +8 (F)</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">10</td>
-      <td>Dustin Johnson E
-+2 thru 12</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -774,6 +758,22 @@ E thru 12</td>
 +4 (F)</td>
       <td>Daniel Berger +7
 +5 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">11</td>
+      <td>Dustin Johnson E
++2 thru 12</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
       <td class="greyout">Jordan Spieth
@@ -812,22 +812,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa(W) -1
-E thru 12</td>
-      <td>Hideki Matsuyama +1
-+4 thru 11</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">13</td>
       <td>Collin Morikawa -1
@@ -844,16 +828,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">14</td>
+      <td>Collin Morikawa(W) -1
+E thru 12</td>
+      <td>Hideki Matsuyama +1
++4 thru 11</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Hideki Matsuyama +1
 +4 thru 11</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -861,13 +861,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Justin Thomas E
 +1 thru 14</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td>Patrick Cantlay(W) +6
-+5 thru 16</td>
+      <td>Patrick Cantlay(W) +7
++6 thru 17</td>
       <td>Jon Rahm +7
 +5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
       <td>Daniel Berger +7
 +5 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
       <td class="greyout">Xander Schauffele
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Dustin Johnson E
 +2 thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td>Jon Rahm +7
 +5 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
