--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:17:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:18:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -589,11 +589,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 -1 thru 12</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Will Zalatoris +1
@@ -605,9 +605,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Justin Thomas E
 +1 thru 15</td>
       <td>Rory McIlroy +1
@@ -618,22 +618,6 @@ E thru 12</td>
 -1 (F)</td>
       <td class="greyout">Tiger Woods(W) +5
 +4 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa(W) -1
-E thru 12</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +5
-+4 thru 17</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -665,6 +649,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa(W) E
++1 thru 13</td>
+      <td>Justin Thomas E
++1 thru 15</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +5
++4 thru 17</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,22 +716,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
-      <td>Will Zalatoris +1
-+2 thru 13</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">10</td>
       <td>Scottie Scheffler -11
@@ -748,19 +732,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
-      <td>Corey Conners(W) -2
--1 thru 12</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
-      <td>Robert MacIntyre +6
-+4 (F)</td>
-      <td>Daniel Berger +7
-+5 (F)</td>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -796,6 +780,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">11</td>
+      <td>Corey Conners(W) -2
+-1 thru 12</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
+      <td>Robert MacIntyre +6
++4 (F)</td>
+      <td>Daniel Berger +7
++5 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">11</td>
       <td>Justin Thomas E
@@ -813,9 +813,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -829,9 +829,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa(W) -1
-E thru 12</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa(W) E
++1 thru 13</td>
       <td>Hideki Matsuyama +1
 +4 thru 12</td>
       <td>Patrick Cantlay +7
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">18</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Jon Rahm(W) +7
@@ -965,8 +965,8 @@ Missed Cut</td>
     <tr>
       <td class="bigbold greyout">NewCastle Magpies</td>
       <td class="bigbold greyout">-</td>
-      <td class="greyout">Collin Morikawa</td>
       <td class="greyout">Justin Thomas(W)</td>
+      <td class="greyout">Collin Morikawa</td>
       <td class="greyout">Patrick Cantlay</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
