--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:17:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:18:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">2</td>
       <td>Sungjae Im -1
 +2 thru 10</td>
       <td>Justin Thomas E
 +1 thru 15</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -5
 -3 thru 12</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Patrick Cantlay +7
@@ -269,11 +269,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas(W) E
 +1 thru 15</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Will Zalatoris +1
 +2 thru 13</td>
       <td>Tony Finau +4
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">11</td>
       <td>Corey Conners(W) -2
 -1 thru 12</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Robert MacIntyre +6
 +4 (F)</td>
       <td>Jon Rahm +7
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
+      <td class="bigbold">18</td>
+      <td>Collin Morikawa E
++1 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Jon Rahm(W) +7
