--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:29:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:29:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -268,6 +268,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -2
+-1 thru 13</td>
+      <td>Dustin Johnson -1
++1 thru 13</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Russell Henley +7
++4 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">5</td>
       <td>Justin Thomas(W) -1
@@ -281,22 +297,6 @@ E thru 16</td>
       <td class="greyout leftborder">Daniel Berger +7
 +5 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners -2
--1 thru 13</td>
-      <td>Justin Thomas -1
-E thru 16</td>
-      <td>Dustin Johnson E
-+2 thru 12</td>
-      <td>Russell Henley +7
-+4 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Dustin Johnson E
-+2 thru 12</td>
+      <td class="bigbold">18</td>
+      <td>Dustin Johnson -1
++1 thru 13</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +7
