--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:29:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:29:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,15 +269,15 @@ E thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Cameron Smith -6
 -4 thru 13</td>
       <td>Shane Lowry -4
 -1 thru 11</td>
       <td>Corey Conners -2
 -1 thru 13</td>
-      <td>Dustin Johnson(W) E
-+2 thru 12</td>
+      <td>Dustin Johnson(W) -1
++1 thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 +6 thru 17</td>
       <td class="greyout">Louis Oosthuizen
@@ -620,6 +620,22 @@ E thru 16</td>
 +6 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">2</td>
+      <td>Shane Lowry -4
+-1 thru 11</td>
+      <td>Dustin Johnson(W) -1
++1 thru 13</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 17</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">3</td>
       <td>Justin Thomas -1
@@ -649,22 +665,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">3</td>
-      <td>Shane Lowry -4
--1 thru 11</td>
-      <td>Dustin Johnson(W) E
-+2 thru 12</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 17</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -717,11 +717,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">9</td>
       <td>Scottie Scheffler -11
 -3 thru 10</td>
-      <td>Dustin Johnson E
-+2 thru 12</td>
+      <td>Dustin Johnson -1
++1 thru 13</td>
       <td>Patrick Cantlay +7
 +6 thru 17</td>
       <td>Adam Scott +12
@@ -733,9 +733,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">11</td>
-      <td>Dustin Johnson E
-+2 thru 12</td>
+      <td class="bigbold">10</td>
+      <td>Dustin Johnson -1
++1 thru 13</td>
       <td>Rory McIlroy(W) +1
 -1 (F)</td>
       <td>Viktor Hovland +3
@@ -892,6 +892,22 @@ E thru 16</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">18</td>
+      <td>Dustin Johnson -1
++1 thru 13</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">18</td>
       <td>Collin Morikawa E
@@ -905,22 +921,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Dustin Johnson E
-+2 thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
